# eye-chat

./: LICENSE
backend/: .pre-commit-config.yaml  README.md  pyproject.toml
backend/backend/: conftest.py  exceptions.py  settings.py
backend/backend/db/dao/: dummy_dao.py  user.py
backend/backend/db/dependencies/: user.py
backend/backend/db/migrations/versions/: 2022-04-24-21-30_5027ad9b929e.py
backend/backend/db/models/: dummy_model.py  user.py
backend/backend/static/docs/: redoc.standalone.js
backend/backend/tests/: test_backend.py  test_dummy.py  test_redis.py  test_user.py  utils.py
backend/backend/web/: application.py  lifetime.py
backend/backend/web/api/: router.py
backend/backend/web/api/auth/: endpoints.py
backend/backend/web/api/dummy/: views.py
backend/backend/web/api/echo/: __init__.py  endpoints.py
backend/backend/web/api/redis/: __init__.py  endpoints.py
backend/backend/web/api/user/: __init__.py  endpoints.py  schema.py
backend/deploy/: docker-compose.yml
frontend/app/: .gitignore  index.html  package-lock.json  package.json
frontend/app/src/: App.svelte  global.css  smui.css
frontend/app/src/api/: user.js
frontend/app/src/pages/: index.svelte  register.svelte
frontend/app/src/pages/_components/Login/: LoginForm.svelte
frontend/app/src/pages/login/: index.svelte
